2022-11-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2: Guerilla Poetry';git push
	git tag -a 5.1.2 -m 'ncclimo/ncremap: -P eamxx, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags

	* Document --ps_nm, --vrt_in in nco.texi

	* Add new options to usage and man pages

	* NCO 5.1.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-beta01: Nashville';git push
	git tag -a 5.1.2-beta01 -m 'ncclimo/ncremap: -P eamxx, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags

	* ncz2psx: Add --hrd_pth/--npo support for consistency with ncremap/ncclimo

2022-11-08  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha04: Ladybug';git push
	git tag -a 5.1.2-alpha04 -m 'ncclimo/ncremap: -P eamxx, hrd_pth';git push --tags

	* ncremap: Turn permutation off (pdq_flg=No, pdq_opt='') unless horizontal regridding is invoked

	* ncclimo/ncremap: --hrd_pth or --npo as first argument sets NCO_PATH_OVERRIDE='Yes'

2022-11-07  Charlie Zender  <zender@uci.edu>

	* ncremap: -P eamxx set pdq_opt=ilev,lev,dim2,col and ps_nm=ps

2022-11-04  Charlie Zender  <zender@uci.edu>

	* ncremap: Require pdq_flg=Yes to enable pdq_opt for all prc_typ

	* ncclimo/ncremap: Shift slurm mail options to use --mail-type and --mail-user

2022-11-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.2-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.2-alpha03: Love, Death, & Robots';git push
	git tag -a 5.1.2-alpha03 -m 'ncremap ps_nm_in, vrt_in, vrt_out,	stg_grd, T_mid, ';git push --tags

	* ncks: add --vrt_in, shift to --vrt_out

	* ncclimo, docs: shift from --vrt, --vrt_fl to --vrt_out

	* ncremap/ncremap shift from -C, -p to --constraint, --partition

	* ncclimo/ncremap consistent node-names, paths for machine-specific environments, NCO_PATH_OVERRIDE

	* ncremap new functionality appears to work for SCREAM!
