@@ -111,8 +111,10 @@ dbg_lvl]
 [\-\-unn]
 [\-V] [\-v 
 .IR var [,...]]
-[\-\-vrt_fl
-.IR vrt_crd ]
+[\-\-vrt_in
+.IR vrt.nc ]
+[\-\-vrt_out
+.IR vrt.nc ]
 [\-X 
 .IR box ] 
 [\-x]
