@@ -130,9 +130,9 @@ ncremap
 .IR vrb_lvl ]
 [\--version ]
 [\--vrt_in
-.IR vrt_fl ]
+.IR vrt.nc ]
 [\--vrt_out
-.IR vrt_fl ]
+.IR vrt.nc ]
 [\--vrt_ntp=
 .IR vrt_ntp ]
 [\--vrt_xtr=
