@@ -1,8 +1,12 @@
-2022-11-09  Charlie Zender  <zender@uci.edu>
+2022-11-13  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.2 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.2: Guerilla Poetry';git push
 	git tag -a 5.1.2 -m 'ncclimo/ncremap: -P eamxx, hrd_pth; ncremap ps_nm_in, vrt_in, vrt_out';git push --tags
+
+	* ncks fix accidental assignment of fl_out_fmt to NC_FORMAT_64BIT_OFFSET in nco_prn.c
+
+2022-11-09  Charlie Zender  <zender@uci.edu>
 
 	* Document --ps_nm, --vrt_in in nco.texi
 
